// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debug — tag target > renders a filled tag alongside an unfilled one 1`] = `
[
  [
    "console.groupCollapsed",
    "[app-coda] debug ",
  ],
  [
    "console.group",
    "[Tag]: filled",
  ],
  [
    "console.info",
    "value",
  ],
  [
    "console.groupEnd",
  ],
  [
    "console.group",
    "[Tag]: unfilled",
  ],
  [
    "console.info",
    undefined,
  ],
  [
    "console.groupEnd",
  ],
  [
    "console.groupEnd",
  ],
]
`;

exports[`debug — tag target > renders a filled tag with its value 1`] = `
[
  [
    "console.groupCollapsed",
    "[app-coda] debug ",
  ],
  [
    "console.group",
    "[Tag]: api-url",
  ],
  [
    "console.info",
    "https://example.com",
  ],
  [
    "console.groupEnd",
  ],
  [
    "console.groupEnd",
  ],
]
`;

exports[`debug — tag target > renders a tag fed by a task result 1`] = `
[
  [
    "console.groupCollapsed",
    "[app-coda] debug ",
  ],
  [
    "console.group",
    "[Tag]: env",
  ],
  [
    "console.info",
    {
      "name": "dev",
    },
  ],
  [
    "console.groupEnd",
  ],
  [
    "console.groupEnd",
  ],
]
`;

exports[`debug — tag target > renders an unfilled tag as undefined 1`] = `
[
  [
    "console.groupCollapsed",
    "[app-coda] debug ",
  ],
  [
    "console.group",
    "[Tag]: missing",
  ],
  [
    "console.info",
    undefined,
  ],
  [
    "console.groupEnd",
  ],
  [
    "console.groupEnd",
  ],
]
`;
